# blog_ecological_restoration

./: .envrc_template  .gitignore  .pre-commit-config.yaml  LICENSE  docker-compose-local.yml  docker-compose-prod.yml  docker-compose.yml  im_meta_data_checker.py  package-lock.json  package.json  pyproject.toml  readme.md  requirements.txt
blogged/: Dockerfile  Dockerfile.prod  entrypoint.sh  manage.py
blogged/blog/: admin.py  api_views.py  forms.py  models.py  serializers.py  urls.py  views.py
blogged/blog/migrations/: 0001_initial.py  0001_initial_squashed_0011_alter_images_caption.py  0002_alter_post_options_comment.py  0003_mediaattachment.py  0004_remove_mediaattachment_image_name_and_more.py  0005_googlebucketattachment.py  0006_alter_googlebucketattachment_image_and_more.py  0007_alter_post_slug.py  0008_images.py  0009_post_date.py  0010_gpscoordinates.py  0011_alter_images_caption.py  0012_alter_mediaattachment_created_at_and_more.py  0013_delete_comment.py  0014_delete_mediaattachment.py  0015_delete_googlebucketattachment.py  0016_post_uuid_field.py  0017_remove_post_uuid_field.py  (+1 more)
blogged/blogcontact/: apps.py  forms.py  urls.py  views.py
blogged/blogged/: asgi.py  forms.py  settings.py  urls.py  views.py  wsgi.py
blogged/common/: utils.py
blogged/image_processing/: meta_data_processing.py
blogged/impact_maps/: apps.py  urls.py  views.py
blogged/templates/: base.html  contact.html  index.html
docs/: requirements.md
nginx/: nginx.conf
scripts/: create_superuser.sh
tests/: conftest.py  settings.py  test_blog.py  test_index.py
(+16 files in other folders)
